# JET-guide

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  versions.json
.github/workflows/: build.yml  clean-all-versions.yml  delete-version-for-deleted-branch.yml  deploy-master.yml  deploy-other-branches.yml
basics/babys-first-script/: index.html
basics/howdoi/: index.html
basics/python-primer/: index.html
basics/setup/: index.html
common-errors/: 404.html  index.html  sitemap.xml
common-errors/resources/: index.html
common-errors/search/: search_index.json
comp/: 404.html  index.html  objects.inv  sitemap.xml
comp/javascripts/: katex.js
comp/resources/: index.html
comp/search/: search_index.json
comp/stylesheets/: fields.css
docs/: comparison.md  descaling.md  howdoi.md  index.md  resources.md  setup.md  x264params.md
docs/basics/: babys-first-script.md  common-errors.md  getting-started.md  how-do-i.md  howdoi.md  (+4 more)
dvd-remux/: 404.html  index.html  sitemap.xml
expr-guide/: 404.html  index.html  sitemap.xml
installation/: 404.html  index.html  sitemap.xml
master/: 404.html  index.html  sitemap.xml
mvtools/: 404.html  index.html  sitemap.xml
resources/: index.html
search/: search_index.json
spotting-artifacting/: 404.html  index.html  sitemap.xml
vsjetpack-fix/: 404.html  index.html  sitemap.xml
wip_codecs_containers/: 404.html  index.html  sitemap.xml
wobbly/: 404.html  index.html  sitemap.xml
x265-params-basic/: 404.html  index.html  sitemap.xml
(+276 files in other folders)
