[project]
name = "jet-guide"
version = "0.0.0"
description = "JET Encoding Guide"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.6.4",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[dependency-groups]
dev = [
    "mike>=2.1.3",
]

[tool.uv]
package = false
